--- a/tfe2023/package.json
+++ b/tfe2023/package.json
@@ -13,11 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
+    "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.1",
+    "react-super-responsive-table": "^5.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "react-router-dom": "^6.8.1"
   }
 }
