--- a/tfe2023/package.json
+++ b/tfe2023/package.json
@@ -15,12 +15,16 @@
     "bootstrap-icons": "^1.10.3",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-datepicker": "^4.10.0",
     "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-simplert": "0.0.2",
     "react-super-responsive-table": "^5.2.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
