--- a/tfe2023/Frontend/package.json
+++ b/tfe2023/Frontend/package.json
@@ -11,43 +11,20 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.2.1",
-    "@fortawesome/free-regular-svg-icons": "6.2.1",
-    "@fortawesome/free-solid-svg-icons": "6.2.1",
-    "@fortawesome/react-fontawesome": "0.2.0",
     "@jest/expect-utils": "29.3.1",
     "@jest/schemas": "28.1.3",
-    "@popperjs/core": "2.11.6",
-    "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
-    "@trysound/sax": "0.2.0",
-    "ajv-formats": "2.1.1",
-    "all": "0.0.0",
-    "at-least-node": "1.0.0",
+    "al": "0.0.3",
     "bootstrap": "5.2.3",
     "bootstrap-icons": "1.10.3",
-    "core-util-is": "1.0.3",
-    "deep-equal": "2.1.0",
-    "jspdf": "^2.5.1",
-    "lodash.sortby": "4.7.0",
-    "p-try": "2.2.0",
-    "process-nextick-args": "2.0.1",
     "react": "18.2.0",
-    "react-alice-carousel": "^2.7.1",
-    "react-big-calendar": "^1.6.9",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
-    "react-icons": "4.7.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "react-super-responsive-table": "^5.2.1",
-    "require-from-string": "2.0.2",
-    "source-list-map": "2.0.1",
-    "sweetalert2": "^11.7.5",
-    "web-vitals": "2.1.4",
-    "yargs": "16.2.0"
+    "web-vitals": "2.1.4"
   },
   "browserslist": {
     "production": [
